tests/fail/dangling_pointers/wild_pointer_deref.rs
// compile-flags: -Zmiri-permissive-provenance

fn main() {
    let p = 44 as *const i32;
    let x = unsafe { *p }; //~ ERROR is not a valid pointer
    panic!("this should never print: {}", x);
}
